force-app/main/default/objects/Quote_Action_Framework__mdt/Quote_Action_Framework__mdt.object-meta.xml
<CustomObject>
    <description>Used to determine followup timeframes for Quotes.  Each time interval is referenced in Minutes.</description>
    <label>Quote Action Framework</label>
    <pluralLabel>Quote Action Frameworks</pluralLabel>
</CustomObject>