force-app/main/default/objects/Quote_Action_Framework__mdt/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status Change</fullName>
                <default>true</default>
                <label>Status Change</label>
            </value>
            <value>
                <fullName>Pending Information</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>