force-app/main/default/objects/Quote_Action_Framework__mdt/fields/RSG_Delay__c.field-meta.xml
<CustomField>
    <fullName>RSG_Delay__c</fullName>
    <label>RSG Delay</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>