force-app/main/default/objects/Quote_Action_Framework__mdt/fields/Service_Classification__c.field-meta.xml
<CustomField>
    <fullName>Service_Classification__c</fullName>
    <label>Service Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Future</fullName>
                <default>true</default>
                <label>Future</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Quote Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>