force-app/main/default/objects/Quote_Action_Framework__mdt/listViews/AB.listView-meta.xml
<ListView>
    <fullName>AB</fullName>
    <columns>MasterLabel</columns>
    <columns>Status__c</columns>
    <columns>DeveloperName</columns>
    <columns>Action_Type__c</columns>
    <columns>Customer_Delay__c</columns>
    <columns>RSG_Delay__c</columns>
    <columns>TPH_Delay__c</columns>
    <columns>WM_Delay__c</columns>
    <columns>Service_Classification__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <label>AB</label>
</ListView>